# ML-for-iot-project-presence-detector

./: README.md  best.weights.h5  eval_lr.py  ghost_detector_cli.py  group_room_2_9_dec_presence.csv  group_room_3_yazan_lab_9_dec_presence.csv  group_room_4_9_dec_no_presence.csv  group_room_4_9_dec_presence.csv  group_room_5_9_dec_presence.csv  group_room_9_dec_presence.csv  imu_audio_log.csv  imu_log.csv  infer_lr.py  main.py  notebook.ipynb  pyproject.toml  requirements.txt  test_presence.csv  train_logreg.py  training-lax_no_presence.csv  training-lax_presence.csv  training2-lax_no_presence.csv  training2-lax_presence.csv
MyProject/: MyProject.ino
arduino/ghost_detector/: ghost_detector.ino  lr_weights.h  net.h
